external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/inner_allow_outer_deny.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E09002]: unused variable
   ┌─ tests/move_check/warning_suppression/inner_allow_outer_deny.move:10:16
   │
 2 │ #[deny(unused_variable)]
   │        --------------- the lint level is defined here
   ·
10 │     fun denied(a: u64) {
   │                ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'

error[E09002]: unused variable
   ┌─ tests/move_check/warning_suppression/inner_allow_outer_deny.move:11:13
   │
 2 │ #[deny(unused_variable)]
   │        --------------- the lint level is defined here
   ·
11 │         let y;
   │             ^ Unused local variable 'y'. Consider removing or prefixing with an underscore: '_y'
